--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -20,7 +20,7 @@
                         <h3 class="mb-0">Add New Account</h3>
                     </div>
                     <div class="card-body">
-                        <form method="post" enctype="multipart/form-data" novalidate>
+                        <form method="post" novalidate>
                             <div class="form-group mb-3">
                                 <label asp-for="userName" class="form-label">Username</label>
                                 <input asp-for="userName" class="form-control" />
@@ -53,11 +53,6 @@
                                     <option value="false">Female</option>
                                 </select>
                                 <span asp-validation-for="gender" class="text-danger"></span>
-                            </div>
-                            <div class="form-group mb-3">
-                                <label asp-for="avatar" class="form-label">Avatar</label>
-                                <input asp-for="avatar" class="form-control" type="file" />
-                                <span asp-validation-for="avatar" class="text-danger"></span>
                             </div>
                             <div class="d-grid">
                                 <button type="submit" class="btn btn-primary btn-block">Create Account</button>
