--- a/Views/Student/Add.cshtml
+++ b/Views/Student/Add.cshtml
@@ -46,6 +46,15 @@
                                 <input asp-for="className" class="form-control" />
                                 <span asp-validation-for="className" class="text-danger"></span>
                             </div>
+                            <div class="form-group mb-3">
+                                <label class="form-label">Select Courses</label>
+                                <select name="selectedCourseIds" class="form-control" multiple="multiple">
+                                    @foreach (var course in ViewBag.Courses as SelectList)
+                                    {
+                                        <option value="@course.Value">@course.Text</option>
+                                    }
+                                </select>
+                            </div>
                             <div class="d-grid">
                                 <button type="submit" class="btn btn-primary btn-block">Add Student</button>
                             </div>
