--- a/Views/Student/Add.cshtml
+++ b/Views/Student/Add.cshtml
@@ -20,7 +20,7 @@
                         <h3 class="mb-0">Add New Student</h3>
                     </div>
                     <div class="card-body">
-                        <form method="post" novalidate>
+                        <form asp-action="Add" method="post" novalidate>
                             <div class="form-group mb-3">
                                 <label asp-for="Name" class="form-label"></label>
                                 <input asp-for="Name" class="form-control" />
@@ -47,11 +47,11 @@
                                 <span asp-validation-for="className" class="text-danger"></span>
                             </div>
                             <div class="form-group mb-3">
-                                <label class="form-label">Select Courses</label>
-                                <select name="selectedCourseIds" class="form-control" multiple="multiple">
-                                    @foreach (var course in ViewBag.Courses as SelectList)
+                                <label for="studentCourseID" class="form-label">Select Course</label>
+                                <select id="studentCourseID" name="studentCourseID" class="form-control">
+                                    @foreach (var course in ViewBag.Courses)
                                     {
-                                        <option value="@course.Value">@course.Text</option>
+                                        <option value="@course.CourseID">@course.name</option>
                                     }
                                 </select>
                             </div>
