--- a/Views/Student/List.cshtml
+++ b/Views/Student/List.cshtml
@@ -24,6 +24,7 @@
                         <th scope="col">Phone</th>
                         <th scope="col">Date of Birth</th>
                         <th scope="col">Class Name</th>
+                        <th scope="col">Applied Courses</th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
@@ -37,6 +38,12 @@
                             <td>@student.Phone</td>
                             <td>@student.dateOfBirth.ToShortDateString()</td>
                             <td>@student.className</td>
+                            <td>
+                                @foreach (var sc in student.studentCourses)
+                                {
+                                    <span class="badge bg-info text-dark">@sc.course.name</span>
+                                }
+                            </td>
                             <td>
                                 <a href="@Url.Action("Edit", "Student", new { id = student.Id })" class="btn btn-warning btn-sm">Edit</a>
                                 <a href="@Url.Action("Delete", "Student", new { id = student.Id })" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this student?');">Delete</a>
